k8s/base/api-server/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-server-route
  namespace: parktrack
spec:
  parentRefs:
  - name: parktrack-gateway
  hostnames:
  - "api.parktrack.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: api-server
      port: 8000
